objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <formula>CASE(Lead.Annual_Revenue_Picklist__c,
&quot;&lt;$2.5&quot;,&quot;&lt;$2.5&quot;,
&quot;$2.5M-$4.9M &quot;,&quot;$2.5M-$4.9M&quot;,
&quot;$5M-$9.9M&quot;,&quot;$5M-$9.9M&quot;,
&quot;$10M+&quot;,&quot;$10M+&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Revenue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_Project_Size__c</fullName>
        <formula>Lead.Average_Project_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Project Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buy_Side__c</fullName>
        <formula>Lead.Buy_Side__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buy Side</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Headquarter_State__c</fullName>
        <formula>TEXT( Lead.Company_Headquarter_State__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Headquarter State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <formula>CASE( Lead.Company_Size__c , 
&quot;1 to 10&quot;,&quot;1 to 10&quot;,
&quot;11-19&quot;,&quot;11-19&quot;,
&quot;20-39&quot;,&quot;20-39&quot;,
&quot;40-100&quot;,&quot;40-100&quot;,
&quot;101-250&quot;,&quot;101-250&quot;,
&quot;251-500&quot;,&quot;251-500&quot;,
&quot;501-1,000&quot;,&quot;501-1,000&quot;,
&quot;1,000+&quot;,&quot;1,000+&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country2__c</fullName>
        <formula>Lead.Sales_Coverage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Relationship_Type__c</fullName>
        <formula>TEXT(Lead.Customer_Relationship_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Relationship Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECM_Type__c</fullName>
        <formula>IF(INCLUDES(Lead.ECM_Type__c,&quot;Solar&quot;),&quot;Solar,&quot;,&quot;&quot;)  &amp; 
IF(INCLUDES(Lead.ECM_Type__c,&quot;Lighting&quot;),&quot;Lighting,&quot;,&quot;&quot;)  &amp;
IF(INCLUDES(Lead.ECM_Type__c,&quot;Cooling/Heating/Refrigeration&quot;),&quot;Cooling/Heating/Refrigeration,&quot;,&quot;&quot;)  &amp;
IF(INCLUDES(Lead.ECM_Type__c,&quot;Building Automation/Controls&quot;),&quot;Building Automation/Controls,&quot;,&quot;&quot;)  &amp;
IF(INCLUDES(Lead.ECM_Type__c,&quot;Energy Supply/Co-Generation/Storage&quot;),&quot;Energy Supply/Co-Generation/Storage,&quot;,&quot;&quot;)  &amp;
IF(INCLUDES(Lead.ECM_Type__c,&quot;Metering/Data Logger&quot;),&quot;Metering/Data Logger,&quot;,&quot;&quot;)  &amp;
IF(INCLUDES(Lead.ECM_Type__c,&quot;Water Management&quot;),&quot;Water Management,&quot;,&quot;&quot;)  &amp;
IF(INCLUDES(Lead.ECM_Type__c,&quot;Deep Retrofit (Multi ECM Types)&quot;),&quot;Deep Retrofit (Multi ECM Types),&quot;,&quot;&quot;)  &amp;
IF(INCLUDES(Lead.ECM_Type__c,&quot;Other&quot;),&quot;Other,&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ECM Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Category__c</fullName>
        <formula>Lead.Job_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <formula>TEXT(Lead.LeadSource)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <formula>CASE(Lead.Status, 
&quot;Lead&quot;,&quot;Lead&quot;,
&quot;New Lead&quot;,&quot;New Lead&quot;,
&quot;Nurture&quot;,&quot;Nurture&quot;,
&quot;Remarket&quot;,&quot;Remarket&quot;,
&quot;Converted Lead&quot;,&quot;Converted Lead&quot;,
&quot;Trash&quot;,&quot;Trash&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <formula>CASE( Lead.Lead_Type__c , 
&quot;Primary&quot;,&quot;Primary&quot;, 
&quot;Secondary &quot;,&quot;Secondary&quot;,  
&quot;Target&quot;,&quot;Target&quot;, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Business_Type__c</fullName>
        <formula>TEXT(Lead.Primary_Business_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Business Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Technology_Type__c</fullName>
        <formula>TEXT(Lead.Primary_Technology_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Technology Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Lead_Type__c</fullName>
        <formula>CASE( Lead.Product_Lead_Type__c ,
&quot;Pro (Front Office+M&amp;V)&quot;,&quot;Pro (Front Office+M&amp;V)&quot;,
&quot;Pro Front Office&quot;,&quot;Pro Front Office&quot;,
&quot;Pro M&amp;V&quot;,&quot;Pro M&amp;V&quot;,
&quot;Noesis Financing Services&quot;,&quot;Noesis Financing Services&quot;,
&quot;Pro Data Services&quot;,&quot;Pro Data Services&quot;,
&quot;Pro Customer Engagement Services&quot;,&quot;Pro Customer Engagement Services&quot;,
&quot;Project Finance Assessment (PFA)&quot;,&quot;Project Finance Assessment (PFA)&quot;,
&quot;Pro Channel&quot;,&quot;Pro Channel&quot;,
&quot;Program Partner&quot;,&quot;Program Partner&quot;,
&quot;Program Affiliate&quot;,&quot;Program Affiliate&quot;,
&quot;Concierge Partner&quot;,&quot;Concierge Partner&quot;,
&quot;Concierge Vendor&quot;,&quot;Concierge Vendor&quot;,
&quot;Marketing Services&quot;,&quot;Marketing Services&quot;,
&quot;EAP&quot;,&quot;EAP&quot;,
&quot;MEC Customization&quot;,&quot;MEC Customization&quot;,
&quot;MEC Subscriber&quot;,&quot;MEC Subscriber&quot;,
&quot;Tradeshow Partner&quot;,&quot;Tradeshow Partner&quot;,
&quot;Pro Software&quot;,&quot;Pro Software&quot;,
&quot;Other&quot;,&quot;Other&quot;,
&quot;Financing Partner&quot;,&quot;Financing Partner&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Lead Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarket_Reason__c</fullName>
        <formula>CASE(Lead.Remarket_Reason__c,
&quot;International Location&quot;,&quot;International Location&quot;, 
&quot;New Zealand,Singapore&quot;,&quot;Australia,New Zealand,Singapore&quot;, 
&quot;Residential Focus&quot;,&quot;Residential Focus&quot;,
&quot;Product Limitations&quot;,&quot;Product Limitations&quot;,
&quot;Not Interested but Good Future Candidate&quot;,&quot;Not Interested but Good Future Candidate&quot;,
&quot;Budget Constraint&quot;,&quot;Budget Constraint&quot;,
&quot;Internal Re-org&quot;,&quot;Internal Re-org&quot;,
&quot;Business is Not a Good Fit&quot;,&quot;Business is Not a Good Fit&quot;,
&quot;Student&quot;,&quot;Student&quot;,
&quot;Timing&quot;,&quot;Timing&quot;,
&quot;Decision Maker is Not Interested&quot;,&quot;Decision Maker is Not Interested&quot;,
&quot;Lead Non Responsive&quot;,&quot;Lead Non Responsive&quot;,
&quot;Project Finance Partnership Request&quot;,&quot;Project Finance Partnership Request&quot;,
&quot;Buy-Side&quot;,&quot;Buy-Side&quot;,
&quot;Competitor&quot;,&quot;Competitor&quot;,
&quot;Other&quot;,&quot;Other&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remarket Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reraised__c</fullName>
        <formula>Lead.Reraised__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reraised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Technology_Owner__c</fullName>
        <formula>Lead.Sales_Technology_Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Technology Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Lead_Index__c</fullName>
        <formula>Lead.Target_Lead_Index__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Lead Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>